# service/controllers/accounts.go
@@ -1,23 +1,28 @@
 package controllers
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/gin-gonic/gin"
 
-// ShowAccount godoc
-// @Summary Show an account
-// @Description get string by ID
+	_ "github.com/dnguyenngoc/robot/service/models"
+
+	_ "github.com/dnguyenngoc/robot/service/exceptions"
+
+)
+
+// Login AccessToken
+// @Description login get access-token
 // @Tags accounts
+// @Param  account body models.LoginAccessTokenParam true "Login by User/Pass" 
 // @Accept  json
 // @Produce  json
-// @Param id path int true "Account ID"
-// @Success 200 {object} model.Account
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
-// @Router /api/v1/accounts/login/access-token [get]
+// @Success 200 {object} models.LoginAccessToken
+// @Failure 400 {object} exceptions.BadRequest
+// @Failure 404 {object} exceptions.NotFound
+// @Failure 500 {object} exceptions.InternalServerError
+// @Router /api/v1/accounts/login/access-token [post]
 func (ctl *Controller) LoginAccessToken(c *gin.Context){
 	c.JSON(200, gin.H{
-        "access_token": "fake_access_token",
-		"expire_token": "50000",
-		"refresh_token": "fake_refresh_token",
+        "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWV9.TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ",
+		"refresh_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWV9.TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ",
     })
 }
