# service/models/accounts.go
@@ -1,0 +1,12 @@
+package models
+
+
+type LoginAccessToken struct {
+	AccessToken string `json:"access_token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWV9.TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ"`
+	FreshToken string `json:"fresh_token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWV9.TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ"`
+}
+
+type LoginAccessTokenParam struct {
+	UserName string `json:"user_name" example:duynguyenngoc"`
+	Password string `json:"password" example:"@1q2w3e4r"`
+}
